--- a/src/styles.css
+++ b/src/styles.css
@@ -123,3 +123,20 @@ img.socialIcon {
   height: 30px;
   width: 30px;
 }
+
+/* add a smooth scroll */
+html {
+  scroll-behavior: smooth;
+}
+
+/* add a slide in animation */
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(10%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
